2009-07-02  Jb Evain  <jbevain@novell.com>

	* Makefile: fix cecil's location.

2009-06-16  Andrés G. Aragoneses  <aaragoneses@novell.com>

	* Mono.Tuner/MoonlightA11yProcessor.cs: GLibSharp uses
	  Activator.CreateInstance for *Adapter classes, so we need to
	  have an exception here for these ctors (to avoid
	  MissingMethodExceptions).

2009-06-10  Andrés G. Aragoneses  <aaragoneses@novell.com>

	* Mono.Tuner/MoonlightA11yDescriptorGenerator.cs: Cosmetic.

	* Mono.Tuner/MoonlightA11yAssemblyStep.cs: Typo.

2009-06-09  Andrés G. Aragoneses  <aaragoneses@novell.com>

	* Mono.Tuner/MoonlightA11yDescriptorGenerator.cs: Cosmetic.

2009-06-09  Andrés G. Aragoneses  <aaragoneses@novell.com>

	* Mono.Tuner.csproj:
	* Mono.Tuner.dll.sources: Update.

	* Mono.Tuner/MoonlightA11yProcessor.cs:
	* Mono.Tuner/MoonlightA11yAssemblyStep.cs: Typo.

	* Mono.Tuner/MoonlightA11yUsageInspectionStep.cs:
	* Mono.Tuner/MoonlightA11yDescriptorGenerator.cs: New steps
	  for prevention of API stripping.

2009-06-04  Andrés G. Aragoneses  <aaragoneses@novell.com>

	* Mono.Tuner.dll.sources:
	* Mono.Tuner.csproj: Update.
	* Mono.Tuner/InjectSecurityAttributes.cs:
	* Mono.Tuner/MoonlightAssemblyStep.cs: Change some accessibility
	keywords, to be able to override and inherit.
	* Mono.Tuner/MoonlightA11yProcessor.cs:
	* Mono.Tuner/MoonlightA11yAssemblyStep.cs: New steps for a11y.

2009-06-02  Andrés G. Aragoneses  <aaragoneses@novell.com>

	* Mono.Tuner.csproj: Update.

	* Mono.Tuner/InjectSecurityAttributes.cs: Avoid NRE.

2009-05-28  Andrés G. Aragoneses  <aaragoneses@novell.com>

	* Mono.Tuner/InjectSecurityAttributes.cs: show a warning if using
	the MoonlightAssemblyStep but no secattr option is specified.

2009-05-15  Jb Evain  <jbevain@novell.com>

	* Mono.Tuner/InjectSecurityAttributes.cs: fix retrieval
	of generic methods.

2009-05-15  Jb Evain  <jbevain@novell.com>

	* Mono.Tuner/InjectSecurityAttributes.cs: fix issues
	with non unique MethodReference.ToString for generic method defs.