@@ -1,3 +1,15 @@
+2009-08-07  Andrés G. Aragoneses  <aaragoneses@novell.com>
+
+	* Mono.Tuner/InjectSecurityAttributes.cs: Make an enum
+	  protected.
+
+	* Mono.Tuner/MoonlightA11yProcessor.cs: Prevent
+	  Type*Exceptions because of badly placed SC attrib on
+	  methods.
+
+	* Mono.Tuner/MoonlightA11yDescriptorGenerator.cs: Typo in
+	  comment.
+
 2009-07-02  Jb Evain  <jbevain@novell.com>
 
 	* Makefile: fix cecil's location.
